fix(cas): 调整优化cas接入问题